# ewc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  spec.md
.github/workflows/: ci.yml  release.yml
Formula/: ewc.rb
src/: cli.rs  counter.rs  lib.rs  main.rs  output.rs
tests/: benchmark.rs  integration.rs
