[package]
name = "ewc"
version = "0.1.0"
edition = "2021"
description = "Enhanced Word Count - A modern alternative to wc"
license = "MIT"
authors = ["ino <tsukasaI@users.noreply.github.com>"]
repository = "https://github.com/tsukasaI/ewc"
keywords = ["cli", "wc", "word-count", "utility"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"

[dev-dependencies]
tempfile = "3"
